--- a/tattooSaloon/src/Index/Index.module.css
+++ b/tattooSaloon/src/Index/Index.module.css
@@ -43,23 +43,24 @@
 
 .btn {
     margin: 25px;
-    background-color: black;
+    background-color: rgba(0, 0, 0, 0.9);
     border: 3px outset white;
-    color: white;
+    color: rgb(215, 215, 215);
     padding: 10px 25px;
     cursor: pointer;
     transition: 0.3s;
     font-weight: 400;
 
     &:hover {
-        background-color: rgb(59, 59, 59);
+        background-color: rgb(0, 0, 0);
+        color: white;
 
     }
 }
 
 /* The next part is for the carousel */
 .sliderWrapper {
-    height: 720px;
+    height: 900px;
     background-color: #dddddd;
     white-space: nowrap;
     overflow: hidden;
@@ -67,9 +68,10 @@
 }
 
 .imagesContainer {
-    height: 100%;
+    height: 91%;
     display: inline-block;
- padding-top: 15px;
+    padding-top: 15px;
+    padding-bottom: 15px ;
 }
 
 .slideAnimation {
@@ -78,10 +80,10 @@
 
 
 .imagesContainer .imgWrapper {
-    height: 100%;
+    height: 91%;
     display: inline-block;
     position: relative;
-      margin: 10px;
+    margin: 10px;
 
 }
 
@@ -111,7 +113,7 @@
 }
 
 .imagesContainer .imgWrapper img {
-    height: inherit;
+    height: 100%;
     transition: 0.5s;
     z-index: 2;
     position: absolute;
