--- a/tattooSaloon/src/About/About.module.css
+++ b/tattooSaloon/src/About/About.module.css
@@ -1,19 +1,18 @@
 .outerWrapper{
     display: flex;
     flex-direction: column;
-    width: 1080px;
+    width: 80%;
 }
 .aboutContainer{
  display: flex;
-
  padding-top: 100px;
-
 }
 .aboutImg{
-    height: 500px;
+    width: 376px;
 }
 .aboutImg img{
-    height: inherit;
+    margin: auto;
+   width: inherit;
     border: 3px white inset;
 
 }
@@ -85,7 +84,13 @@
 }
 
 @media (max-width: 575.98px) {
- 
+ .aboutContainer{
+    flex-direction: column;
+    font-size: 1rem;
+ }
+ .aboutImg img{
+    width: 250px;
+ }
 }
 
 /* Small Devices, Tablets (576px to 768px) */
