--- a/tattooSaloon/src/Footer/Footer.module.css
+++ b/tattooSaloon/src/Footer/Footer.module.css
@@ -9,7 +9,7 @@
     color: white;
     border-bottom: 1px solid white;
     border-top: 1px solid white;
-
+    font-size: 12px;
     height: 50px;
     display: flex;
     justify-content: center;
