--- a/tattooSaloon/src/Contact/Contact.module.css
+++ b/tattooSaloon/src/Contact/Contact.module.css
@@ -1,40 +1,48 @@
-.contactWrapper{
+.contactWrapper {
     width: 900px;
     height: min-content;
     padding-top: 60px;
 }
-.headerWrapper{
+
+.headerWrapper {
     padding-top: 60px;
     display: flex;
     gap: 30px;
-    padding-bottom: 60px;
+    padding-bottom: 100px;
     font-size: 1rem;
-    :nth-child(1){
-        flex: 1;      
+
+    :nth-child(1) {
+        flex: 1;
     }
-    :nth-child(2){
+
+    :nth-child(2) {
         flex: 1;
     }
 }
-.leftPart{
-    h1{
+
+.leftPart {
+    h1 {
         font-size: 4rem;
         font-weight: 500;
         line-height: 1;
         padding-bottom: 1.5rem;
     }
-    h3{
+
+    h3 {
         color: rgba(255, 255, 255, 0.8);
         font-weight: 500;
     }
 }
-.rightPart{
-    display: flex;    
+
+.rightPart {
+    display: flex;
+    flex-direction: row;
     align-items: end;
     position: relative;
 
 }
-.rightPart .emailCard{
+
+.rightPart .emailCard {
     display: flex;
     background-color: black;
     border: 3px outset white;
@@ -43,30 +51,96 @@
     cursor: pointer;
 }
 
-.emailCard svg{
-    height:60px;
-    padding-left: 150px;
-    }
-.formWrapper input, .formWrapper textarea{
-   height: 2.25rem;
-   border: 3px outset white;
-   background-color: rgba(221, 221, 221, 0.5);
-   opacity: 0.8;
+.emailCard svg {
+    height: 60px;
 }
-.formWrapper textarea{
+
+.emailAlert {
+    width: 200px;
+    height: 50px;
+    align-content: center;
+    text-align: center;
+    background-color: #dddddd;
+    color: black;
+    position: absolute;
+    bottom: 50%;
+    left: 0;
+    transform: translateX(50%);
+    z-index: 1;
+    transition: 0.5s;
+    opacity: 0;
+    pointer-events: none;
+    border: 3px solid white;
+   
+
+
+    &::after {
+        content: "";
+        background-color: #dddddd;
+        width: 10px;
+        height: 10px;
+        position: absolute;
+        transform: translateX(50%) rotate(45deg);
+        right: 50%;
+        bottom: -7.5px;
+        z-index: -1;
+        border-right: 3px solid white;
+        border-bottom: 3px solid white;
+
+    }
+   
+
+   
+}
+.emailCard:hover + .emailAlert{
+    opacity: 1;
+    transform: translate3d(50%,-1rem,0);
+}
+.disabled {
+}
+
+.formWrapper input,
+.formWrapper textarea {
+    height: 2.25rem;
+    border: 3px outset white;
+    background-color: rgba(221, 221, 221, 0.5);
+    opacity: 0.8;
+}
+
+.formWrapper textarea {
     height: 10rem;
     resize: none;
 }
-.formWrapper label{
+
+.formWrapper label {
     font-size: 1.5rem;
     color: rgba(255, 255, 255);
 }
-.pairWrapper{
+
+.pairWrapper {
     display: grid;
     width: 100%;
     padding-bottom: 1rem;
 }
-.groupWrapper{
+
+.groupWrapper {
     display: flex;
     gap: 30px;
+}
+.submitBtn{
+    background-color: rgba(0, 0, 0, 0.9);
+    border: 3px outset white;
+    color: rgb(215, 215, 215);
+    padding: 10px 25px;
+    cursor: pointer;
+    transition: 0.3s;
+    font-weight: 400;
+    width: 200px;
+    transform: translateX(-50%);
+    margin-left: 50%;
+    margin-top: 100px;
+    &:hover{
+        color: white;
+        background-color: black;
+    }
 }
