--- a/tattooSaloon/src/Header/Header.module.css
+++ b/tattooSaloon/src/Header/Header.module.css
@@ -33,9 +33,7 @@
     color: inherit;   
     width: max-content;
     transition: 0.5s;
-    padding-left: 20px;
-
-    
+    margin-left: 20px;  
 
 }
 
@@ -51,7 +49,9 @@
 @media(max-width:768px) {
     .linksWrapper {
         position: absolute;
-        left: 30%;
+        left: 0;
+        right:0;
+    
 
     }
 
@@ -60,6 +60,10 @@
         position: absolute;
         color: #CED4DA;
         font-size: 24px;
+        left: 0;
+        right:0;
+        margin-left: auto;
+        margin-right: auto;
       
               
     }
