--- a/tattooSaloon/src/Catalog/Catalog.module.css
+++ b/tattooSaloon/src/Catalog/Catalog.module.css
@@ -45,10 +45,33 @@
 .cardsWrapper{
     height: max-content;
     width: 100%;
-    padding: 50px 0px;
+    padding-top: 50px ;
     background-color: beige;
     display: grid;
     grid-template-columns: auto auto auto auto;
     justify-content: center;
     gap: 50px 30px;
+}
+
+.buttonsWrapper{
+    width: 100%;
+    height: 100px;
+    background-color: beige;
+     display: flex;
+    justify-content:center ;
+    align-items: center;
+    gap: 50px;
+}
+.buttonsWrapper .pageBtn{
+    background-color: #dddddd;
+    border: 3px outset black;
+    font-weight: 700;
+    width: 40px;
+    height: 40px;
+    cursor: pointer;
+}
+.pageBtn.active{
+    background-color: black;
+    color: white;
+    border-color: white;
 }
