--- a/tattooSaloon/src/Index/Index.module.css
+++ b/tattooSaloon/src/Index/Index.module.css
@@ -141,8 +141,11 @@
 
 .cardContainer img,
 .cardContainer .outerWrapper {
-    transition: 0.5s;
+    transition-behavior: normal;
+    transition-duration: 0.5s;
+    transition-timing-function: cubic-bezier(0.22, 0.61, 0.36, 1);
     transition-delay: 0.15s;
+    transition-property: all;
 }
 
 .cardContainer:hover img {
