--- a/tattooSaloon/src/Catalog/modal.module.css
+++ b/tattooSaloon/src/Catalog/modal.module.css
@@ -1,74 +1,26 @@
-.wrapperBtn {
-  display: flex;
-  right: 0;
-  margin: 0;
-  padding: 0;
-}
-
-.wrapperBtn button {
-  margin-left: 7.5px; 
-  background: none;
-  border: 3px white double;
-  border-radius: 10px;
-  padding: 11px 25px;
-  color: white;
-  width: 184.4px;
-  font-family: 'Comfortaa', cursive;
-  font-size: 1rem;
-  cursor: pointer;
-  text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.2);
-  
-}
-
-.wrapperBtn button:hover {
-  background-color: rgb(239, 55, 45);
-  transition-duration: .4s;
-}
-
-.dropdown {
-  position: relative;
-}
-
-.dropdownMenu {
-  position: absolute;
-  left:-10%;
-  right:-10%;
-  text-align: center;
-  top: calc(100%+.25rem);
-  background-color: #FC5E55;
-  padding: .75rem;
-  border-radius: .25rem;
-  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.547);
-  opacity: 0;
-  pointer-events: none    ;
-  /* These are the settings for a very smooth drop down */
-  transform: translateY(-10px);
-  transition: opacity 0.15s ease-in-out, transform 0.15s ease-in-out;
-  /* These are the settings for a very smooth drop down */
-
-}
-
-
-.dropdown.active>.dropDownBtn+.dropdownMenu {
-  /* These are the settings for a very smooth drop down */
-  opacity: 1;
-  transform: translateY(0);
-  /* These are the settings for a very smooth drop down */
-  pointer-events: auto;
-}
 
 .modal{
   position: fixed;
   left: 50%;
-  top: 70px;
-  transform: translateX(-50%);
-
+  top: 0;
+  transform: translate(-50%,0px);
+  z-index: 10;
   opacity: 0;
   pointer-events: none;
-
+  transition-behavior: normal;
+  transition-duration: 0.4s;
+  transition-timing-function: cubic-bezier(0.22, 0.61, 0.36, 1);
+  transition-property: all;
+}
+.modalActive{
+  opacity: 1;
+  pointer-events: all;
+  transform: translate(-50%, 70px);
 }
 .modal img{
   max-height: calc(100vh - 100px);
+  max-width: calc(100vw - 100px);
+  border: 3px inset black;
 }
 .closeBtn{
   width: 30px;
@@ -80,12 +32,33 @@
   justify-content: center;
   align-items: center;
   cursor: pointer;
-  transition: 0.3s;
+  transition: 0.4s;
 
   &:hover{
     scale: 1.1;
   }
+  &:active{
+    scale:0.8
+  }
 }
-.modal.active{
-  opacity: 1;
+
+.overlay
+{
+  left: 0;
+  top: 60px;
+  width: 100%;
+  height: 100vh;
+  position: fixed;
+  z-index: 9;
+  pointer-events: none;
+  transition-behavior: normal;
+    transition-duration: 0.4s;
+    transition-timing-function: cubic-bezier(0.22, 0.61, 0.36, 1);
+    transition-property: all;
+
+}
+.overlayActive{
+  background-color: rgba(0, 0, 0, 0.25);
+  pointer-events: all;
+
 }
